; ModuleID = '/home/carl/AnghaBench/darknet/examples/extr_rnn.c_read_tokenized_data.c'
source_filename = "/home/carl/AnghaBench/darknet/examples/extr_rnn.c_read_tokenized_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @read_tokenized_data(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64* %1, i64** %4, align 8
  store i64 512, i64* %5, align 8
  store i64 0, i64* %6, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32* @fopen(i8* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %12, i32** %7, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i32* @calloc(i64 %13, i32 4)
  store i32* %14, i32** %8, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @fscanf(i32* %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32* %9)
  store i32 %16, i32* %10, align 4
  br label %17

17:                                               ; preds = %33, %2
  %18 = load i32, i32* %10, align 4
  %19 = icmp eq i32 %18, 1
  br i1 %19, label %20, label %41

20:                                               ; preds = %17
  %21 = load i64, i64* %6, align 8
  %22 = add i64 %21, 1
  store i64 %22, i64* %6, align 8
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* %5, align 8
  %25 = icmp ugt i64 %23, %24
  br i1 %25, label %26, label %33

26:                                               ; preds = %20
  %27 = load i64, i64* %5, align 8
  %28 = mul i64 %27, 2
  store i64 %28, i64* %5, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = load i64, i64* %5, align 8
  %31 = mul i64 %30, 4
  %32 = call i32* @realloc(i32* %29, i64 %31)
  store i32* %32, i32** %8, align 8
  br label %33

33:                                               ; preds = %26, %20
  %34 = load i32, i32* %9, align 4
  %35 = load i32*, i32** %8, align 8
  %36 = load i64, i64* %6, align 8
  %37 = sub i64 %36, 1
  %38 = getelementptr inbounds i32, i32* %35, i64 %37
  store i32 %34, i32* %38, align 4
  %39 = load i32*, i32** %7, align 8
  %40 = call i32 @fscanf(i32* %39, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i32* %9)
  store i32 %40, i32* %10, align 4
  br label %17

41:                                               ; preds = %17
  %42 = load i32*, i32** %7, align 8
  %43 = call i32 @fclose(i32* %42)
  %44 = load i32*, i32** %8, align 8
  %45 = load i64, i64* %6, align 8
  %46 = mul i64 %45, 4
  %47 = call i32* @realloc(i32* %44, i64 %46)
  store i32* %47, i32** %8, align 8
  %48 = load i64, i64* %6, align 8
  %49 = load i64*, i64** %4, align 8
  store i64 %48, i64* %49, align 8
  %50 = load i32*, i32** %8, align 8
  ret i32* %50
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32* @calloc(i64, i32) #1

declare dso_local i32 @fscanf(i32*, i8*, i32*) #1

declare dso_local i32* @realloc(i32*, i64) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
